[gd_scene load_steps=11 format=2]

[ext_resource path="res://texture/interactables/folding_leaf.png" type="Texture" id=1]
[ext_resource path="res://script/folding_leaf.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 128 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": false,
"name": "folding",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "returning",
"speed": 5.0
} ]

[node name="folding_leaf" type="StaticBody2D"]
collision_layer = 10
collision_mask = 14
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -24, -44, 0, -60, 12, -60, 16, -56, 28, -52, 28, -48 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 10
collision_mask = 14

[node name="CP2D-leaf" type="CollisionPolygon2D" parent="Area2D"]
polygon = PoolVector2Array( -24, -44, -12, -52, 0, -60, 12, -60, 16, -56, 28, -52, 28, -48 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 8 )
animation = "returning"
frame = 2
playing = true

[node name="fold_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="fold_timer" to="." method="_on_fold_timer_timeout"]
